More fine-looking UI improvements

--- a/TicTacToe/app/src/main/res/values/strings.xml
+++ b/TicTacToe/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Super TTT</string>
+    <string name="app_name_styled">super ttt</string>
+    <string name="leaderboards">Leaderboards</string>
 </resources>
